--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,14 +9,10 @@ website:
   title: "Página R"
   favicon: 01_img/icono.png
   bread-crumbs: false # Para que elimie de la parte superior las indicaciones de dónde se está (P.ej., que no aparezca: Análisis de datos > Análisis bivariado > Ttest )
-  reader-mode: true # La pestañita que aparece arriba para ocultar todos las tablas de contenido
   page-navigation: true # Para que al final de cada página aparezca una opción de ir a la siguiente página o a la anterior.
   back-to-top-navigation: true # Para que al final de cada página aparezca una opción para subir otra vez al principio.
   search: true # Para añadir la lupa a la página
   comments: 
-    hypothesis:
-      theme: clean
-      openSidebar: false
     giscus:
       repo: jorgeemm/Pagina_R
       repo-id: "R_kgDONhBVEg"
@@ -27,7 +23,7 @@ website:
       theme:
         light: light
         dark: dark_dimmed
-      
+
 # El menú de navegación superior se escribe del siguiente modo  
   navbar:
     tools: 
@@ -75,7 +71,7 @@ website:
           contents:
             - analisis/reg-lineal.qmd
             - analisis/reg-multiple.qmd
-            - analisis/predicciones.qmd
+            - analisis/predicciones-lineal.qmd
             - analisis/reg-logistica.qmd
  
     - title: "Gráficos"
@@ -95,6 +91,9 @@ format:
     theme: # Se puede añadir una opción para poner la página en modo claro o modo oscuro
       light: flatly
       dark: darkly
+    include-after-body: custom-toggle.js
+    title-block-banner: "#f0f3f5"
+    title-block-banner-color: "black"
     css: styles.css
     toc: true
     toc-title: "Contenido"    
@@ -122,9 +121,8 @@ format:
             });
           });
           </script>
- 
-# Configuración global de knitr
-knitr:
+
+knitr: # Configuración global de knitr
   opts_chunk: 
     echo: true
     message: false
