--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ website:
       - text: "Introducción a R" # El título del apartado del índice
         href: index.qmd         # El archivo de referencia que se abrirá cuando se pulse sobre esa pestaña
       - text: "Bases de datos y variables"
-        href: df-var/ficheros-datos.qmd
+        href: df-var/apertura-datos.qmd
       - text: "Análisis de datos"
         href: analisis/descriptivo.qmd      
       - text: "Gráficos"
