--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,6 +64,7 @@ website:
           contents:
             - df-var/edicion-variables.qmd
             - df-var/categoricas.qmd
+            
         - df-var/group_by.qmd
         - df-var/casos-perdidos.qmd
       
@@ -83,17 +84,22 @@ website:
             - analisis/predicciones-lineal.qmd
             - analisis/reg-logistica.qmd
  
-    - title: "Gráficos - ggplot"
+    - title: "Gráficos"
       contents:
-        - graficos/g-intro.qmd
-        - graficos/g-visual.qmd
-        - graficos/g-otras-transformaciones.qmd
-        - graficos/g-lineas.qmd
-        - graficos/g-barras.qmd
-        - graficos/g-mancuernas.qmd
-        - graficos/g-otros.qmd
-        - graficos/g-galeria.qmd
-
+        - section: "ggplot"
+          contents:
+            - graficos/g-intro.qmd
+            - graficos/g-visual.qmd
+            - graficos/g-otras-transformaciones.qmd
+            - graficos/g-puntos.qmd
+            - graficos/g-lineas.qmd
+            - graficos/g-distribucion.qmd
+            - graficos/g-mancuernas.qmd
+            - graficos/g-otros.qmd
+            - graficos/g-galeria.qmd
+            
+        - graficos/datawraper.qmd
+    
 
 format:
   html:
@@ -108,17 +114,6 @@ format:
     code-annotations: hover # Para que las anotaciones en el código (# <1>) aparezcan solo al pasar el ratón por encima, y no estén siempre debajo del chunk
     language: es
     include-in-header:
-      - text: |
-          <style>
-          /* Estilos para todo el documento */
-          body {
-            text-align: justify;
-          }
-          /* Estilos específicos para la tabla de contenidos */
-          .toc-actions, .toc .nav, .toc .nav > li > a {
-            text-align: left !important;
-          }
-          </style>
       - text: |
           <script>
           // Añadir funcionalidad de zoom para imágenes
